# telegra_flask_run

./: .gitignore  README.md  api.py  main.py  pyproject.toml
apps/bot_telegram/: bot_run.py
config/: settings.py
media/: file.txt
